--- a/src/components/firm-facts/firm-facts.module.scss
+++ b/src/components/firm-facts/firm-facts.module.scss
@@ -41,7 +41,7 @@
 
 	@media (width <= 768px) {
 		.cardsContainer{
-			grid-template-columns: 1fr;
+			grid-template-columns: minmax(0, 1fr);
 		}
 	}
 
